--- a/json-server/package.json
+++ b/json-server/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "express-fileupload": "^1.5.1",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1"
   }
